--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap');
 *{
   box-sizing:border-box;
 }
@@ -28,8 +28,8 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 body,html {
+  font-family: 'Roboto Mono';
   line-height: 1;
-  font-family: Poppins, serif;
   font-size: 16px;
   height: 100%;
 }
@@ -48,4 +48,14 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+.main-title{
+  font-family:'Open Sans' ;
+}
 
+.margin-left{
+  margin-left:8px;
+}
+
+.bold{
+  font-weight: 700;
+}
