--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -183,3 +183,216 @@ select{
     padding: 5px;
     
 }
+.div-col-ob{
+    grid-column:  1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    grid-gap: 20px;
+}
+.div-col-ob:nth-child(1){
+   
+    grid-column: 2 span;
+    display: flex;
+    width: 100%;
+    height: auto;
+}
+.div-col-ob:nth-child(1.2.3)p{
+    text-align: justify;
+}
+.div-col-activity{
+    grid-column: 1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 220%;
+    gap: 20px;
+}
+.col1-activity 
+{
+    width: 203%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    
+}
+.col1-activity div{
+    margin-right: 80px;
+    display: block;
+    width: 100%;
+    height: auto;
+    text-align: start;
+
+}
+.col2-activity{
+    width: 203%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around; 
+    margin-right:100px;
+}
+.col2-activity div{
+    display: block;
+    width: 100%;
+    height: auto;
+    text-align: start;
+    margin-right: 80px;
+}
+.col3-activity{
+    width: 203%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin-right:100px;
+}
+.col3-activity div{
+    display: block;
+    width: 110%;
+    height: auto;
+    text-align: start;
+    margin-right: 80px;
+}
+@media (max-width: 840px) {
+   .div-col-ob{ 
+    grid-column: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+   }
+   .div-col-ob:nth-child(1){
+   
+    grid-column: 1 span;
+    display: block;
+    width: 100%;
+    height: auto;
+}
+.div-col-activity{
+    grid-column:  1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 60%;
+    grid-gap: 10px;
+    margin-left: -10px;
+}
+.col3-activity{
+    width: 105%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 5%;
+    
+}
+.col1-activity{
+    width: 105%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 5%;
+}
+.col2-activity{
+    width: 105%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 5%;
+}
+.col1-activity div{
+    margin-right: 80px;
+    display: block;
+    width: 100%;
+    height: auto;
+    text-align: start;
+   
+}
+.col2-activity div{
+    margin-right: 80px;
+    display: block;
+    width: 100%;
+    height: auto;
+    text-align: start;
+   
+}
+.col3-activity div{
+    margin-right: 80px;
+    display: block;
+    width: 100%;
+    height: auto;
+    text-align: start;
+}
+}
+@media (max-width: 600px) {
+    .div-col-activity{
+        grid-column:  1;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        width: 120%;
+        grid-gap: 10px;
+        margin-right: 80px;
+    }
+    .col3-activity{
+        width: auto;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left:10%;
+        
+    }
+    .col1-activity{
+        width: auto;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left:10%;
+    }
+    .col2-activity{
+        width: auto;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+       margin-left: 10%;
+    }
+    .col1-activity div{
+        display: block;
+        width: 90%;
+        height: auto;
+        text-align: start;
+       
+    }
+    .col2-activity div{
+        display: block;
+        width: 90%;
+        height: auto;
+        text-align: start;
+       
+    }
+    .col3-activity div{
+        display: block;
+        width: 90%;
+        height: auto;
+        text-align: start;   
+    }
+}
